<resources>
    <string name="app_name">WGU Terms</string>
    <string name="mainActivityText">Welcome to WGU</string>
    <string name="maBtn">Open Terms</string>
    <string name="termActivityText">There\'s nothing here yet.</string>
    <string name="courseActivityBtn">Open Course Activity</string>
    <string name="courseActivityText">Try the next one!</string>
    <string name="assessmentActivityBtn">Open Assessment Activity</string>
    <string name="AssessmentActivityText">Nope, nothing here.</string>
    <string name="termTitleText">Terms</string>
    <string name="channel_name">notification channel</string>
    <string name="channel_description">notification channel description</string>
    <string name="courseTitleText">Courses</string>
    <string name="assessmentTitleText">Assessments</string>
    <string name="title_term_list">Terms</string>
    <string name="title_term_detail">Term Detail</string>
    <string name="detail_menu">Menu</string>
    <string name="edit_detail">Edit</string>
    <string name="delete_detail">Delete Term</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_courses">View Courses</string>
    <string name="term_title">Term title:</string>
    <string name="enter_term_title">Enter term title</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End Date:</string>
    <string name="pick_an_end_date">Pick an end Date</string>
    <string name="new_term">New Term:</string>
    <string name="edit_term">Edit Term:</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="sample_alarm">Set Sample Alarm</string>
    <string name="sample_data">Create Sample Data</string>
    <string name="delete_course">Delete Course</string>
    <string name="view_assessments">View Assessments</string>
    <string name="mentor_phone">Mentor Phone:</string>
    <string name="some_mentor">Some Mentor</string>
    <string name="mentor_name">Mentor Name:</string>
    <string name="note">Note:</string>
    <string name="add_sample_course">Add Sample Course</string>
    <string name="title_course_list">Courses</string>
    <string name="title_course_detail">Course Detail</string>
    <string name="title_assessment_list">Assessments</string>
    <string name="title_assessment_detail">Assessment Detail</string>
    <string name="title">Title:</string>
    <string name="type">Type:</string>
    <string name="due_date">Due Date:</string>
    <string name="add_sample_assessment">Add Sample Assessment</string>
</resources>
